syntax = "proto3";

package lobby;

option go_package = "service/lobby/proto";

message UserPropsInfoRequest {}

message PropsInfo {
  int32 id = 1;
  string name = 2;
  int32 count = 3;
}

message UserPropsInfoResponse {
  repeated PropsInfo props = 1;
}

message UserMatchRequest {
  string game_name = 1;
  int32 room_id = 2;
}

message UserMatchResponse {}

message PlayerInfo {
  int64 uid = 1;
  int32 seat_id = 2;
}

message UserGameStartNotify {
  string battle_id = 1;
  repeated PlayerInfo players = 2;
  int32 errcode = 3;
  string errmsg = 4;
}

message UserGameOverNotify {}